Fixing GUI for visualizer : + Correcting Step1-Bis alignement to right using float-left + Replace H4 tags to span (irrelevant titles)

--- a/css/jazzchords.css
+++ b/css/jazzchords.css
@@ -35,11 +35,22 @@ body {
 	flex-direction: column;
 }
 
+#visualizer span {
+	line-height: 34px; /*adapt to bootstrap button height*/
+}
+
 .flexbox > button.rootKey,
 .verticalFlexbox > button.chordType,
-#alteration-selector > button
-{
+#alteration-selector button {
 	width: 65px;
+}
+
+#alteration-selector > span {
+	float: left;
+}
+
+#alteration-selector > div.btn-group {
+		margin-left: 30px;
 }
 
 #visualKeyboard {
